--- a/fourgym/src/styles/maincontent.scss
+++ b/fourgym/src/styles/maincontent.scss
@@ -1,10 +1,22 @@
-.main-content{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 3em 1em;
-
-    &-logodiv {
-        border: 2px solid black;
-        margin: 1em;
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
+.main-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 3em 1em;
+  font-family: "Cabin", sans-serif;
+  &-description {
+    &-title {
+      font-size: 28pt;
     }
+    &-text {
+      font-size: 16pt;
+      text-align: justify;
+    }
+    &-btn {
+      font-family: "Cabin", sans-serif;
+      font-weight: 500;
+      font-size: 12pt;
+      padding: 1em 3em;
+    }
+  }
 }
