--- a/fourgym/src/styles/navbar.css
+++ b/fourgym/src/styles/navbar.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
 .navbar {
   display: flex;
   justify-content: space-between;
   margin: 1em;
+  font-family: "Cabin", sans-serif;
 }
 .navbar-logo {
   padding: 0 1em;
+  font-weight: 500;
 }
 .navbar-list {
   list-style-type: none;
