--- a/fourgym/src/styles/navbar.scss
+++ b/fourgym/src/styles/navbar.scss
@@ -1,17 +1,20 @@
- .navbar {
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em;
+  font-family: "Cabin", sans-serif;
+
+  &-logo {
+    padding: 0 1em;
+    font-weight: 500;
+  }
+
+  &-list {
+    list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    margin: 1em;
-
-    &-logo {
-        padding: 0 1em;
+    &-element {
+      padding: 0 1em;
     }
-
-     &-list {
-        list-style-type: none;
-        display: flex;
-        &-element {
-            padding: 0 1em;
-        }
-     }
- }
+  }
+}
