Visual revamp and background adjust

--- a/yourgym/src/styles/navbar.css
+++ b/yourgym/src/styles/navbar.css
@@ -2,11 +2,13 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  margin: 1em;
+  margin: 0.2em;
   font-family: "Cabin", sans-serif;
+  max-width: 80em;
+  color: #E5E5CB;
 }
 .navbar-logo {
-  padding: 0 1em;
+  padding: 1em 1em;
   font-weight: 500;
 }
 .navbar-list {
@@ -14,5 +16,12 @@
   display: flex;
 }
 .navbar-list-element {
-  padding: 0 1em;
+  padding: 1em 1em;
+  cursor: pointer;
+}
+.navbar-list-element:hover {
+  background-color: #E5E5CB;
+  border-radius: 0.2em;
+  color: #3C2A21;
+  transition: 0.3s ease;
 }/*# sourceMappingURL=navbar.css.map */
