--- a/yourgym/src/styles/maincontent.css
+++ b/yourgym/src/styles/maincontent.css
@@ -1,9 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
+.maindiv {
+  max-width: 80em;
+  background: no-repeat url(/pexels-william-choquette-1954524.jpg);
+  background-size: cover;
+  border-radius: 0.2em;
+}
+
 .main-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 3em 1em;
+  padding: 3em 2em 5em 2em;
+  border-radius: 0.2em;
   font-family: "Cabin", sans-serif;
+  background-color: rgba(213, 206, 163, 0.5215686275);
 }
 .main-content-description-title {
   font-size: 28pt;
@@ -17,4 +26,42 @@
   font-weight: 500;
   font-size: 12pt;
   padding: 1em 3em;
+  border: none;
+  background-color: #1a120b;
+  color: #d5cea3;
+  border-radius: 0.2em;
+  cursor: pointer;
+}
+.main-content-description-btn:hover {
+  background-color: rgba(26, 18, 11, 0.8156862745);
+  transition: 0.2s ease;
+}
+
+.carddiv {
+  font-family: "Cabin", sans-serif;
+  margin: 0em 0em;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: start;
+  background-color: #d5cea3;
+}
+.carddiv-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13pt;
+  padding: 1.2em 1em 1em;
+  margin: 0 1.3em;
+}
+.carddiv-card .icon-div {
+  padding: 0.3em 1em 0 0;
+  font-size: 20pt;
+}
+.carddiv .main-card {
+  font-size: 18pt;
+  padding: 0em 1em 1em;
+  text-align: center;
+}
+.carddiv .main-card:nth-child(1) {
+  margin-top: 0.5em;
 }/*# sourceMappingURL=maincontent.css.map */
