--- a/yourgym/src/styles/maincontent.scss
+++ b/yourgym/src/styles/maincontent.scss
@@ -1,9 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap");
+
+.maindiv {
+  max-width: 80em;
+  background: no-repeat url(/pexels-william-choquette-1954524.jpg);
+  background-size: cover;
+  border-radius: 0.2em;
+}
+
 .main-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 3em 1em;
+  padding: 3em 2em 5em 2em;
+  border-radius: 0.2em;
+
   font-family: "Cabin", sans-serif;
+  background-color: #d5cea385;
+
   &-description {
     &-title {
       font-size: 28pt;
@@ -17,6 +29,47 @@
       font-weight: 500;
       font-size: 12pt;
       padding: 1em 3em;
+      border: none;
+      background-color: #1a120b;
+      color: #d5cea3;
+      border-radius: 0.2em;
+      cursor: pointer;
+      &:hover {
+        background-color: #1a120bd0;
+        transition: .2s ease;
+      }
     }
+  }
+}
+
+.carddiv {
+  font-family: "Cabin", sans-serif;
+  margin: 0em 0em;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: start;
+
+  background-color: #d5cea3;
+
+  &-card {
+    .icon-div {
+      padding: 0.3em 1em 0 0;
+      font-size: 20pt;
+    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 13pt;
+    padding: 1.2em 1em 1em;
+    margin: 0 1.3em;
+    // border: 1px solid black;
+  }
+  .main-card {
+    font-size: 18pt;
+    padding: 0em 1em 1em;
+    text-align: center;
+  }
+  .main-card:nth-child(1) {
+    margin-top: 0.5em;
   }
 }
